# HiveTraceRed

./: .env.template  README.md  build_docs.sh  config.yaml  full_pipeline.ipynb  generate_report.py  pyproject.toml  requirements.txt  run.py  sys_prompt_extr.ipynb  system_prompt_extraction.ipynb
.github/workflows/: publish-docs.yml
attacks/: README.md  __init__.py  algo_attack.py  composed_attack.py  model_attack.py  template_attack.py
attacks/types/: README.md  __init__.py
datasets/: prompts.csv  prompts_subset.csv  system_prompt_extraction_ru.csv
docs/: README.md  architecture.rst  attack_lifecycle.rst  component_interactions.rst  conf.py  diagrams.rst  index.rst  installation.rst  license.rst  licenses_table.rst  quickstart.rst  requirements.txt  usage_examples.rst
docs/_static/: .gitkeep
docs/api/: attacks.rst  evaluators.rst  index.rst  models.rst  pipeline.rst  setup.rst  utils.rst
docs/attacks/: context-switching.rst  context_switching.rst  crescendo.rst  in-context-learning.rst  in_context_learning.rst  index.rst  irrelevant-information.rst  irrelevant_information.rst  output-formatting.rst  output_formatting.rst  persuasion.rst  roleplay.rst  simple-instructions.rst  simple_instructions.rst  task-deflection.rst  task_deflection.rst  text-structure.rst  text_structure_modification.rst  token-smuggling.rst  token_smuggling.rst
docs/evaluators/: index.rst  wildguard.rst
docs/examples/: basic-usage.rst  full-pipeline.rst  full_pipeline_example.rst  index.rst  system-prompt-extraction.rst  system_prompt_extraction.rst
docs/getting-started/: configuration.rst  index.rst  installation.rst  quickstart-api.rst  quickstart-local.rst  quickstart.rst
docs/how-to/: add_custom_attack.rst  analyze_results.rst  index.rst
docs/pipeline/: index.rst
docs/reference/: architecture.rst  attack_lifecycle.rst  index.rst  (+1 more)
evaluators/: __init__.py  keyword_evaluator.py  model_evaluator.py  system_prompt_detection_evaluator.py  wild_guard_evaluator.py  wild_guard_ru_evaluator.py  wild_guard_ru_hal_evaluator.py
examples/: full_pipeline.ipynb  system_prompt_extraction.ipynb
models/: __init__.py  gemini_model.py  gemini_native_model.py  gigachat_model.py  langchain_model.py  llamacpp_model.py  ollama_model.py  openai_model.py  openrouter_model.py  sber_cloud_model.py  yandex_model.py
pipeline/: __init__.py  constants.py  create_dataset.py  evaluation.py  model_responses.py
scripts/: validate_attack.py  validate_evaluator.py  validate_model.py
tests/: conftest.py  test_attack_conformance.py  test_evaluator_conformance.py  test_model_conformance.py  test_report.py
utils/: __init__.py  utils.py
(+452 files in other folders)
